discussion/kv_engine/128640/128640_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39505: Move server_stats to StatCollector interface

Change-Id: I0036d990c26f1a1607def6841ed85610bbde5bc2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-05-27 15:06:42.000000000
Message: 
Uploaded patch set 7: Patch Set 6 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-27 15:08:24.000000000
Message: 
Patch Set 7: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2440/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:6: error: unknown type name "ep_storage_age" [clang-diagnostic-error]
STAT(ep_storage_age, microseconds)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:22: error: unknown type name "microseconds" [clang-diagnostic-error]
STAT(ep_storage_age, microseconds)
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:65:1: error: expected function body after function declarator [clang-diagnostic-error]
STAT(ep_storage_age_highwat, microseconds)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:174:34: error: use of undeclared identifier "num_ops" [clang-diagnostic-error]
STAT(ep_num_ops_get_meta, count, num_ops, {{"op", "get_meta"}})
                                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2440/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:6:
error: unknown type name "ep_storage_age" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2440/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24278/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/include/statistics/stats.def.h:174:34:
error: use of undeclared identifier "num_ops"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24278/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/956/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
